--- a/.github/workflows/fetch_currency_bi.yml
+++ b/.github/workflows/fetch_currency_bi.yml
@@ -20,12 +20,12 @@ jobs:
         go-version: '1.16'
 
     - name: Fetch currency rates
-      run: go run ./src/main.go
+      run: go run ./src/fetch_currency_bi.go
 
     - name: Commit and push if changes
       run: |
         git config --global user.email "action@github.com"
         git config --global user.name "GitHub Action"
         git add -A
-        git commit -m "Update currency rates" -a || echo "No changes to commit"
+        git commit -m "Update currency rates for BI" -a || echo "No changes to commit"
         git push
