--- a/.github/workflows/fetch_currency_all.yml
+++ b/.github/workflows/fetch_currency_all.yml
@@ -27,5 +27,5 @@ jobs:
         git config --global user.email "action@github.com"
         git config --global user.name "GitHub Action"
         git add -A
-        git commit -m "Update currency rates for all" -a || echo "No changes to commit"
+        git commit -m "Update currency rates for all $(date +'%Y-%m-%d')" -a || echo "No changes to commit"
         git push
